syntax = "proto3";

package procutils.v1;

import "schema/v1/schema.proto";

option go_package = "github.com/conduitio/conduit-processor-sdk/proto/procutils/v1";

message CreateSchemaRequest {
  string subject = 1;
  schema.v1.Schema.Type type = 2;
  bytes bytes = 3;
}
message CreateSchemaResponse {
  schema.v1.Schema schema = 1;
}

message GetSchemaRequest {
  string subject = 1;
  int32 version = 2;
}
message GetSchemaResponse {
  schema.v1.Schema schema = 1;
}
